--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -36,7 +36,7 @@
 .btn-primary {
     color: #fff;
     background-color: #50E3C2;
-    border: 1px solid #48ccae;
+    border: none;
 }
 .btn-primary:hover {
     background-color: #61e5c8;
