Chris let me clean up a little bit!! :smile:

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -2,8 +2,8 @@
 
 body {
 	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-	color: #555;
-	background: #FAFAFA;
+	color: @grey-1;
+	background: @grey-6;
 }
 
 h1, h2, h3, h4, h5, h6 {
