--- a/assets/styles/variables.less
+++ b/assets/styles/variables.less
@@ -17,8 +17,10 @@
 
 @primary: #50E3C2;
 @primary-lt: #96EEDA;
+@primary-dk: #40b59b;
 @secondary: #498FE3;
 @secondary-lt: #91BCEE;
+@secondary-dk: #3a72b5;
 
 @grey-1: #4a4a4a;
 @grey-2: #666;
