--- a/assets/styles/login.less
+++ b/assets/styles/login.less
@@ -60,7 +60,7 @@
 }
 
 .abcRioButtonLightBlue {
-    color: #white !important;
+    color: @white !important;
     background-color: #3B5998 !important;
     height: 45px !important;
     width: 100% !important;
