--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -2,5 +2,7 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
-
+	a.filter-nav-prev, a.filter-nav-next {
+		display: none;
+	}
 }
