--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -140,3 +140,18 @@ ol, ul {
 .display-false {
     display: none;
 }
+
+.profile-img {
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    display: block;
+    margin: auto;
+    -moz-box-shadow: @drop-4;
+    -webkit-box-shadow: @drop-4;
+    box-shadow: @drop-4;
+}
+.profile-img img {
+    width: 100%;
+    height: 100%;
+}
