--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -15,9 +15,10 @@
     color: #555;
     background-color: #fff;
     background-image: none;
-    border: 1px solid #ccc;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0px -1px 1px 0px rgba(0,0,0,.075);
+    border: 1px solid #ccc; 
+    -moz-box-shadow: @drop-3;
+    -webkit-box-shadow: @drop-3;
+    box-shadow: @drop-3;
     -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
@@ -30,8 +31,9 @@ textarea.form-input {
 
 .btn {
     border-radius: 0;   
-    -webkit-box-shadow: 1px 1px 2px 0px rgba(0,0,0,.2);
-    box-shadow: 1px 1px 2px 0px rgba(0,0,0,.2);
+    -moz-box-shadow: @drop-2;
+    -webkit-box-shadow: @drop-2;
+    box-shadow: @drop-2;
     -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; 
