--- a/assets/styles/variables.less
+++ b/assets/styles/variables.less
@@ -29,4 +29,8 @@
 @grey-5: #e5e5e5;
 @grey-6: #f9f9f9;
 
-@drop-1: drop-shadow(5px 5px 5px rgba(0,0,0,0.6));
+@drop-1: 5px 5px 5px rgba(0,0,0,0.6);
+@drop-2: 1px 1px 2px 0px rgba(0,0,0,.2);
+@drop-3: inset 0 1px 1px rgba(0,0,0,.075);
+@drop-4: 1px 1px 4px 0px rgba(0, 0, 0, 0.6);
+
