--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -3,6 +3,12 @@
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
 
+h1 {
+  font-size: 60px;
+}
+h3 {
+  font-size: 18px;
+}
 	/* System Level Nav Menu */
     .filter-menu > div {
         height: 100%;
@@ -34,4 +40,109 @@
         width: 100%;
         opacity: .75;
     }
+    /*-- playlist --*/
+  .playlist-table-wrapper {
+    display: none;
+  }
+  .playlist-mobile-view-wrapper {
+    display: block;
+  }
+    .playlist-mobile-view-wrapper p {
+      margin: 0;
+    }
+    .playlist-mobile-view-wrapper li {
+      border-bottom: 1px solid lightgrey;
+      padding: 20px 0;
+    }
+    .playlist-mobile-detail {
+      max-width: 200px;
+      display: inline-block;
+    }
+    .playlist-mobile-list-action {
+      display: inline-block;
+      vertical-align: top;
+      max-width: 100px;
+    }
+    /* -- Artist Featured -- */
+  .artist-featured-header {
+    background-position: center top;
+    overflow: visible;
+    height: 280px;
+  }
+  .artist-featured-header-bar {
+    display: none;
+  }
+  .artist-featured-header-info-icon {
+    margin-left: 0;
+    margin-right: 20px;
+    margin-top: @space-md;
+  }
+  .artist-featured-badge-icon {
+    display: none;
+  }
+
+  .artist-featured-badge {
+    width: 250px;
+    margin-top: -70px;
+    border-top: 50px solid rgb(80, 227, 194);
+  }
+  .artist-featured-header-info {
+    padding-top: 20;
+  }  
+  .artist-featured-header-info h2 {
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 20px;
+  }
+  .artist-featured-header-info p {
+    margin-left: 20px;
+    text-align: left;
+  }
+  .artist-featured-header-info {
+    padding-top: 0;
+  }
 }
+
+@media (min-width : 426px) and (max-width: 768px) {
+ 
+    /* -- Artist Profile -- */
+  .artist-featured-header {
+    background-position: center top;
+    overflow: visible;
+    height: 280px;
+  }
+  .artist-featured-header-bar {
+    display: none;
+  }
+  .artist-featured-header-info-icon {
+    margin-left: 0;
+    margin-right: 20px;
+  }
+  .artist-featured-badge-icon {
+    display: none;
+  }
+    .artist-featured-badge {
+      width: 250px;
+      margin-top: -90px;
+      border-top: 50px solid rgb(80, 227, 194);
+    }  
+  .artist-featured-header-info h2 {
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 20px;
+  }
+  .artist-featured-header-info p {
+    margin-left: 20px;
+    text-align: left;
+  }
+  .artist-featured-header-info ul {
+    
+    padding-top: 0;
+  }
+  .artist-suggested-wrapper.row.no-gutters {
+    margin-top: 115px;
+  }
+}
+
+
+
