--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -140,3 +140,8 @@ ol, ul {
 .display-false {
     display: none;
 }
+.mobile-img-thumbnail {
+  height: 75px;
+  width: 75px;
+  vertical-align: top;
+}
