--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -1,6 +1,255 @@
 @import url("variables.less");
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
+@media (max-width : 768px) {
 
+h1 {
+  font-size: 60px;
+}
+h3 {
+  font-size: 20px;
+}
+    .upload-mobile-hidden {
+        display: none;
+    }
+    .artist-internal-sidebar-wrapper {
+        max-width: 100%;
+    }
+    /* -- Artist Profile -- */
+      .artist-featured-header {
+    background-position: center top;
+    overflow: visible;
+    height: 280px;
+  }
+  .artist-featured-header-bar {
+    display: none;
+  }
+  .artist-featured-header-info-icon {
+    margin-left: 0;
+    margin-right: 20px;
+  }
+  .artist-featured-badge-icon {
+    display: none;
+  }
+    .artist-featured-badge {
+      width: 250px;
+      margin-top: -90px;
+      border-top: 50px solid rgb(80, 227, 194);
+    }  
+  .artist-featured-header-info h2 {
+    margin-top: 10px;
+    margin-left: 20px;
+    font-size: 20px;
+  }
+  .artist-featured-header-info p {
+    margin-left: 20px;
+    text-align: left;
+  }
+  .artist-featured-header-info ul {
+    
+    padding-top: 0;
+  }
+  .artist-suggested-wrapper.row.no-gutters {
+    margin-top: 70px;
+  }
+  
+  /*-- artist playlist --*/
+  .playlist-table-wrapper {
+    display: none;
+  }
+  .playlist-mobile-view-wrapper {
+    display: block;
+  }
+  .playlist-header-banner {
+    background-position: center top;
+    background-size: 100% 100%;
+  }
+  .playlist-mobile-view-wrapper p {
+    margin: 0;
+  }
+  .playlist-mobile-view-wrapper li {
+    border-bottom: 1px solid lightgrey;
+    padding: 20px 0;
+  }
+  .playlist-mobile-detail {
+    max-width: 200px;
+    display: inline-block;
+  }
+  .playlist-mobile-list-action {
+    display: inline-block;
+    vertical-align: top;
+    max-width: 100px;
+  }
+
+  /* -- Settings -- */
+  .settings-mobile-nav {
+    display: block;
+  }
+    .settings-mobile-nav h3 {
+      padding: @space-md 0;
+    }
+    .settings-mobile-nav ul {
+      position: absolute;
+      z-index: 999;
+    }
+  .settings-navbar {
+    display: none;
+  }
+  .artist-account-navbar-wrapper {
+    margin:0;
+  }
+  .artist-account-setting-upload-wrapper {
+    padding: 15px 0 5px;
+  }
+
+    .artist-account-form-input input {
+      margin-bottom: 10px;
+    }  
+    .artist-account-setting-profile-img {
+      margin: 0 auto;
+    }
+    .artist-account-form-input p {
+      text-align: left;
+    }
+  /* -- Settings --  */
+  .notification-icon {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .artist-notification-activities input {
+    margin-left: @space-sm;
+  }
+  .artist-notification-header {
+    text-align: center;
+  }
+  .artist-internal-sidebar-wrapper p {
+    padding-bottom: 0;
+  }
+  .artist-internal-top-interest h4 {
+    margin-top: 15px;
+  }
+  /*-- Artist Upload -- */
+  .artist-upload-wrapper {
+    display: none;
+  }
+  /*-- Artist Search -- */
+  .artist-search-table-wrapper {
+    display: none;
+  }
+  .artist-search-tags h3 {
+    font-size: 10px;
+  }
+  .artist-search-tags-list li {
+    display: inline-block;
+  }
+  .artist-search-tags {
+    margin: 3px;
+  }
+  .artist-search-mobile-view-wrapper {
+    display: block;
+    background-color: white;
+  }
+  .artist-search-mobile-view-wrapper li {
+    border-bottom: 1px solid lightgrey;
+    padding: 15px 0;
+  }
+  .artist-search-mobile-view-wrapper h4{
+    margin-bottom: 8px;
+  }
+  .artist-search-mobile-items p {
+    line-height: 10px;
+  }
+  .artist-search-mobile-view-rating {
+    margin-left: -15px;
+  }
+  .artist-search-album-mobile-img  {
+    width: 100px;
+    padding: 0 15px 0 0;
+    margin-left: -15px;
+  }
+  .artist-search-side-bar-wrapper {
+    margin-top: 50px;
+    width: 100%;
+  }
+  /* -- Artist Main Content -- */
+  .artist-main-content-wrapper {
+    text-align: center;
+  }
+    .artist-main-content-wrapper h1 {
+      font-size: 40px;
+    }  
+}
+
+@media (min-width: 769px) and (max-width: 991px) {
+  .artist-featured-badge-icon {
+    margin-left: -60px;
+  }
+  .artist-featured-badge-info h4 {
+    margin-left: -40px;
+  }
+  .artist-featured-header-info ul {
+    margin-left: 20px;
+  }
+  .playlist-table-wrapper td {
+    padding-right: 0;
+  }
+  /*-- Settings --*/
+    .artist-account-setting-upload-wrapper {
+    padding: 15px;
+  }
+  /* Artist Analytics -- */
+  .artist-internal-analyitics-download-wrapper {
+    padding: 40px 40px 0;
+  }
+  .graph-content-wrapper {
+    min-width: 897px;
+  }
+  /*-- Artist Upload --*/
+  .artist-internal-greeting {
+    margin-left: 50px;
+  }
+  .upload-links {
+    margin-left: 10px;
+  }
+  /* -- Artist Search --*/ 
+  .artist-search-tags h3 {
+    font-size: 15px;
+  }
+  .artist-search-album-detail {
+    margin-top: 5px;
+  }
+  /* Artist Nav List */
+  .artist-nav-list {
+    margin-top: -15px;
+    margin-left: 20px;
+    width: 1000px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+    padding: 1rem;
+  }
+    .artist-nav-list li {
+      margin-right: 70px;
+    }
+  .artist-navBar-wrapper::-webkit-scrollbar {
+        display: none;
+    }
+  .internal {
+    display: inline;
+  } 
+
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .artist-featured-header-info ul {
+    margin-left: 20px;
+  }
+  /*-- Artist Upload -- */
+  .artist-internal-greeting {
+    margin-left: 25px;
+  }
+  /* -- Artist Search --*/ 
+  .artist-search-album-detail {
+    margin-top: 5px;
+  }
 }
