--- a/assets/styles/colors.less
+++ b/assets/styles/colors.less
@@ -36,6 +36,9 @@
 .bg-grey-6 {
     background-color: @grey-6;
 }
+.bg-white {
+    background-color: white;
+}
 
 .bg-primary {
     background-color: @primary;
