Update stylesheet.html links
as well as style.less and tablet.less

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -140,12 +140,12 @@ ol, ul {
 .display-false {
     display: none;
 }
-<<<<<<< HEAD
+
 .mobile-img-thumbnail {
   height: 75px;
   width: 75px;
   vertical-align: top;
-=======
+}
 
 .profile-img {
     width: 80px;
@@ -160,5 +160,4 @@ ol, ul {
 .profile-img img {
     width: 100%;
     height: 100%;
->>>>>>> 68435701d0f938975a8b3aeeb3de1bf29e0b3a2c
 }
