--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -1,7 +1,7 @@
 @import url("variables.less");
 
 /* Small Devices, Tablets */
-<<<<<<< HEAD
+
 @media (max-width : 768px) {
 
 h1 {
@@ -253,10 +253,9 @@ h3 {
   .artist-search-album-detail {
     margin-top: 5px;
   }
-=======
+}
 @media only screen and (max-width : 768px) {
 	a.filter-nav-prev, a.filter-nav-next {
 		display: none;
 	}
->>>>>>> 68435701d0f938975a8b3aeeb3de1bf29e0b3a2c
 }
