library playlist revision

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -2,10 +2,12 @@
 
 /*-- Artist Internal -- */
 .artist-internal-wrapper {
-  background-color: white;
-  text-align: left;
+  // width: 500px;
   color: #9B9B9B;
 }
+  .upload-form-wrapper {
+    display: inline-block;
+  }
   .artist-internal-sidebar-wrapper {
     background-color: #FAFAFA;
     display: inline-block;
@@ -92,11 +94,12 @@
 
 .artist-upload-wrapper {
   padding: @space-lg;
-  font-family: 'roboto-light';
+  display: inline-block;
+  font-family: @font-reg;
+  // max-width: 1000px;
 }
   .artist-internal-greeting {
     font-family: 'roboto-light';
-    // padding-top: @space-lg;
     display: inline-block;
     max-width: 300px;
   }
