--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -43,8 +43,16 @@ textarea.form-input {
 }
 .btn-primary {
     color: #fff;
+    padding: 10px;
     background-color: @primary;
     border: none;
+    border-radius: 2px;
+    -moz-box-shadow: @drop-2;
+    -webkit-box-shadow: @drop-2;
+    box-shadow: @drop-2;
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 .btn-primary:hover {
     background-color: @primary-lt;
