--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -1,7 +1,7 @@
 @import url("variables.less");
 
 /* Small Devices, Tablets */
-<<<<<<< HEAD
+
 @media (max-width : 768px) {
 
 h1 {
@@ -207,7 +207,7 @@ h3 {
   }
   /*-- Artist Upload --*/
   .artist-internal-greeting {
-    margin-left: 50px;
+    // margin-left: 50px;
   }
   .upload-links {
     margin-left: 10px;
@@ -238,25 +238,50 @@ h3 {
     }
   .internal {
     display: inline;
+  }
+  .library-result-table table td:nth-child(4), .library-result-table table td:nth-child(7) {
+    display: none;
+  }
+  .library-result-table table th:nth-child(4), .library-result-table table th:nth-child(7) {
+    display: none;
   } 
-
+  .hide-mobile {
+    display: none;
+  }
+  .upload-greeting {
+    width: 100%;
+  }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .artist-featured-header-info ul {
     margin-left: 20px;
   }
   /*-- Artist Upload -- */
-  .artist-internal-greeting {
-    margin-left: 25px;
-  }
+
   /* -- Artist Search --*/ 
   .artist-search-album-detail {
     margin-top: 5px;
   }
-=======
+  /* -- library -- */
+  .library-result-table table td:nth-child(4), .library-result-table table td:nth-child(7) {
+    display: none;
+  }
+  .library-result-table table th:nth-child(4), .library-result-table table th:nth-child(7) {
+    display: none;
+  }
+}
+
 @media only screen and (max-width : 768px) {
 	a.filter-nav-prev, a.filter-nav-next {
 		display: none;
 	}
->>>>>>> 68435701d0f938975a8b3aeeb3de1bf29e0b3a2c
+    .library-result-table table td:nth-child(4), .library-result-table table td:nth-child(7) {
+    display: none;
+  }
+  .library-result-table table th:nth-child(4), .library-result-table table th:nth-child(7) {
+    display: none;
+  }
+    .hide-mobile {
+    display: none;
+  }
 }
