--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -183,7 +183,13 @@
   display: block;
 }
 /*-- Artist Upload Success --*/
-.artist-upload-success-box {
+.artist-upload-success {
+  width: 70%;
+  display: inline-block;
+  margin: 0 5%;
+  padding: 0 5%;
+}
+.artist-success-box {
   text-align: center;
   font-family: @font-reg;
   h2 {
@@ -251,6 +257,22 @@
   .btn {
     margin-right: 1%;
   }
+}
+/*-- Artist Tagged Success --*/
+.artist-tag-success {
+  background: fade(black, 65%);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 3000;
+  .tag-success-box {
+    width: 40%;
+    margin: 6% auto;
+  }
+}
+.artist-tag-success-hidden {
+  visibility: hidden;
 }
 
 /*-- Artist Internal Library --*/
