--- a/assets/styles/nav.less
+++ b/assets/styles/nav.less
@@ -28,11 +28,13 @@
     width: 100%;
     height: 60px;
     margin-bottom: 0;
-    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: @drop-5;
+    -webkit-box-shadow: @drop-5;
+    box-shadow: @drop-5;
     background-color: @white;
     overflow: hidden;
     position: relative;
-    z-index: 2000;
+    z-index: 3000;
 }
 .header-brand {
     padding: 5px 15px 0;
@@ -150,11 +152,13 @@ a.brand {
 .filter-nav {
     width: 100%;
     background-color: @primary;
-    box-shadow: 0 2px 5px -3px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: @drop-5;
+    -webkit-box-shadow: @drop-5;
+    box-shadow: @drop-5;
     overflow: hidden;
     white-space: nowrap;    
     position: relative;
-    z-index: 3000;
+    z-index: 2500;
 }
 .filter-nav-list::-webkit-scrollbar {
     display: none;
@@ -168,11 +172,12 @@ a.brand {
         display: inline-block;
         width: 120px;
         text-align: center;
-        padding: 6px;
+        padding: 10px 6px 6px;
     }
     a {
         color: @white;
-        font-size: 32px;
+        font-size: 26px;
+        line-height: 28px;
         font-weight: normal;
     }
     a:hover {
