--- a/assets/styles/variables.less
+++ b/assets/styles/variables.less
@@ -32,5 +32,5 @@
 @drop-1: 5px 5px 5px rgba(0,0,0,0.6);
 @drop-2: 1px 1px 2px 0px rgba(0,0,0,.2);
 @drop-3: inset 0 1px 1px rgba(0,0,0,.075);
-@drop-4: 1px 1px 4px 0px rgba(0, 0, 0, 0.6);
-
+@drop-4: 1px 1px 4px 0px rgba(0, 0, 0, 0.6);  /* example: profile img */
+@drop-5: 0 0 6px 0 rgba(0, 0, 0, 0.3);  /* example: nav bars */
