--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -56,7 +56,7 @@ textarea.form-input {
 }
 .btn-primary:hover {
     background-color: @primary-lt;
-    border: 1px solid @primary;
+    border: none;
 }
 .btn-sm {
     font-size: 18px;
