Create adminDashboard.jsx and admin.less

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -137,6 +137,9 @@ ol, ul {
 .display-true {
 	display: block;
 }
+.display-inlb {
+    display: inline-block;
+}
 .display-false {
     display: none;
 }
