Davith Sync & Clean Up

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -2,12 +2,10 @@
 
 /*-- Artist Internal -- */
 .artist-internal-wrapper {
-  // width: 500px;
+  background-color: white;
+  text-align: left;
   color: #9B9B9B;
 }
-  .upload-form-wrapper {
-    display: inline-block;
-  }
   .artist-internal-sidebar-wrapper {
     background-color: #FAFAFA;
     display: inline-block;
@@ -94,12 +92,11 @@
 
 .artist-upload-wrapper {
   padding: @space-lg;
-  display: inline-block;
-  font-family: @font-reg;
-  // max-width: 1000px;
+  font-family: 'roboto-light';
 }
   .artist-internal-greeting {
     font-family: 'roboto-light';
+    // padding-top: @space-lg;
     display: inline-block;
     max-width: 300px;
   }
