revised artist profile search

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -496,7 +496,8 @@
 /*-- Artist Account Setting --*/
 .artist-account-navbar-wrapper  {
   background-color: #FAFAFA;
-  min-width: 180px; 
+  min-width: 180px;
+  height: 100%; 
 }
   .artist-account-navbar-wrapper li {
     padding: 15px 0 15px 15px;
