--- a/assets/styles/artist-table.less
+++ b/assets/styles/artist-table.less
@@ -7,5 +7,6 @@
     border-bottom: 1px solid @grey-4;
   }
   .artist-table-wrapper th {
-    padding-bottom: @space-sm;
+    padding-bottom: @space-md;
+    padding-top: @space-md;
   }
