--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -167,3 +167,11 @@ ol, ul {
     width: 100%;
     height: 100%;
 }
+.sidebar {
+    width: 220px;
+    float: left;
+}
+.content-with-sidebar {
+    margin-left: 220px;
+
+}
