--- a/assets/styles/artist-search.less
+++ b/assets/styles/artist-search.less
@@ -3,7 +3,6 @@
 .artist-search-wrapper {
   background-color: @grey-6;
   height: 100%;
-  width: 100%;
   position: relative;
   z-index: -99;
 }
@@ -11,6 +10,7 @@
   position: relative;
   margin-top: 50px;
   width: 250px;
+  height: 100%;
 }
 .artist-search-tags {
   background-color: @primary;
