--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -261,21 +261,47 @@
     margin-right: 1%;
   }
 }
-/*-- Artist Tagged Success --*/
-.artist-tag-success {
+/*-- Artist Tagged Success Modal --*/
+.modal-background {
   background: fade(black, 65%);
   height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
   z-index: 3000;
-  .tag-success-box {
-    width: 40%;
-    margin: 6% auto;
-  }
+}
+.tag-success-box {
+  width: 40%;
+  margin: 6% auto;
 }
 .artist-tag-success-hidden {
   visibility: hidden;
+}
+
+/*-- Artist Download Notice Modal --*/
+.download-notice-box {
+  width: 43%;
+  margin: 10% auto;
+}
+.download-notice-heading {
+  text-align: center;
+}
+.heads-up-title {
+  font-size: 5rem;
+}
+.download-notice-bottom {
+  p, li {
+    font-size: 2rem;
+  }
+  h3 {
+    font-family: @font-reg;
+  }
+}
+.download-notice-links {
+  text-align: right;
+}
+.dont-download {
+  color: @grey-3
 }
 
 /*-- Artist Internal Library --*/
